[package]
name = "issue_107358"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
doctest = false


[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1"
tokio = { version = "1.21.2", features = ["full"] }
ntex = { version = "0.6.4", features=["tokio", "rustls"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing = {version="0.1.36", features = ["max_level_debug", "release_max_level_debug"] }
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.15"
sentry-anyhow = "0.27.0"
rdkafka = "0.28.0"

[dependencies.sentry]
version = "0.27.0"
features = [
  "backtrace",
  "contexts",
  "panic",
  "transport",
  "anyhow",
]
